manifests/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flask
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
  labels:
    istio-injection: enabled
