manifests/flask-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: docker-flask-secret
      containers:
        - name: flask-app
          image: docker.io/berginv/flask-app:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            limits:
              cpu: 250m
              memory: 500Mi

---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: flask
