manifests/mysql-deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-deployment
  namespace: mysql
spec:
  serviceName: mysql-service
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: docker-mysql-secret
      containers:
        - name: mysql-app
          image: mysql:8.0.32-debian
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: initdb
          secret:
            secretName: mysql-schema
          
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 1Gi

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: mysql-claim
#   namespace: mysql
#   labels:
#     app: mysql
# spec:
#   accessModes:
#     - ReadWriteOnce
#   volumeMode: Filesystem
#   storageClassName: local-path
#   resources:
#     requests:
#       storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: mysql
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
